set(TARGET llama-eval-callback)
add_executable(${TARGET} eval-callback.cpp)
install(TARGETS ${TARGET} RUNTIME)
target_link_libraries(${TARGET} PRIVATE common llama ${CMAKE_THREAD_LIBS_INIT})
target_compile_features(${TARGET} PRIVATE cxx_std_17)

set(TEST_TARGET test-eval-callback)
if(NOT ${CMAKE_SYSTEM_PROCESSOR} MATCHES "s390x")
    llama_dl_model("tinyllamas/stories15M-q4_0.gguf")
else()
    llama_dl_model("tinyllamas/stories15M-be.Q4_0.gguf")
endif()
add_test(NAME ${TEST_TARGET} COMMAND llama-eval-callback -m "${LLAMA_DL_MODEL}" --prompt hello --seed 42 -ngl 0)
