set(TARGET_CPU llama-profiler-cpu)
add_executable(${TARGET_CPU} profiler-cpu.cpp)
install(TARGETS ${TARGET_CPU} RUNTIME)
target_link_libraries(${TARGET_CPU} PRIVATE ggml ggml-base common ${CMAKE_THREAD_LIBS_INIT})
target_compile_features(${TARGET_CPU} PRIVATE cxx_std_17)
if (GGML_CUDA)
    target_link_libraries(${TARGET_CPU} PRIVATE ggml-cuda)
    target_compile_definitions(${TARGET_CPU} PRIVATE GGML_USE_CUDA=1)
endif()

set(TARGET_GPU llama-profiler-gpu)
add_executable(${TARGET_GPU} profiler-gpu.cpp)
install(TARGETS ${TARGET_GPU} RUNTIME)
target_link_libraries(${TARGET_GPU} PRIVATE ggml ggml-base ${CMAKE_THREAD_LIBS_INIT})
if (GGML_CUDA)
    target_link_libraries(${TARGET_GPU} PRIVATE ggml-cuda)
    target_compile_definitions(${TARGET_GPU} PRIVATE GGML_USE_CUDA=1)
endif()
target_compile_features(${TARGET_GPU} PRIVATE cxx_std_17)
