set(TARGET_1 llama-tts-outetts-v1)
add_executable(${TARGET_1} tts-outetts-v1.cpp)
target_link_libraries(${TARGET_1} PRIVATE llama common ${CMAKE_THREAD_LIBS_INIT})
target_compile_features(${TARGET_1} PRIVATE cxx_std_17)
install(TARGETS ${TARGET_1} RUNTIME)

set(TARGET_2 llama-tts)
add_executable(${TARGET_2} tts.cpp)
target_link_libraries(${TARGET_2} PRIVATE llama common ${CMAKE_THREAD_LIBS_INIT})
target_compile_features(${TARGET_2} PRIVATE cxx_std_17)
install(TARGETS ${TARGET_2} RUNTIME)